Fix lvl3 visibility refs #5856

--- a/cpskin/menu/browser/resources/menu.css
+++ b/cpskin/menu/browser/resources/menu.css
@@ -76,6 +76,7 @@
 .sf-menu ul.navTreeLevel3
 {
     display: none;
+    visibility: hidden;
 }
 
 .sf-menu ul.navTreeLevel1,
